--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 
+    <!-- Open Graph Protocol meta tags for link preview -->
+    <meta property="og:title" content="Sổ Media website" />
+    <meta property="og:description" content="Sổ Media website" />
+    <meta property="og:image" content="https://assets.unlayer.com/stock-templates/1706527630076-Screenshot%202024-01-29%20182632.png" />
+    <meta property="og:url" content="https://so-media-landingpage.vercel.app/" />
+    <meta property="og:type" content="website" />
 </head>
 
 <body>
