--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/clblogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="author" content="SoMedia">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
+    <meta name="author" content="SoMedia" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Open Graph Protocol meta tags for link preview -->
-    <meta property="og:title" content="Sổ Media website" />
-    <meta property="og:description" content="Sổ Media website" />
-    <meta property="og:image" content="https://assets.unlayer.com/stock-templates/1706527630076-Screenshot%202024-01-29%20182632.png" />
-    <meta property="og:url" content="https://so-media-landingpage.vercel.app/" />
+    <meta property="og:title" content="Câu lạc bộ Sổ Media" />
+    <meta property="og:description" content="Câu lạc bộ Sổ Media" />
+    <meta property="og:image" content="/demo.png" />
+    <meta property="og:url" content="https://so-media-ptit.vercel.app/" />
     <meta property="og:type" content="website" />
-</head>
+  </head>
 
-<body>
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-</body>
-
+  </body>
 </html>
