Update og:description meta tag in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <!-- Open Graph Protocol meta tags for link preview -->
     <meta property="og:title" content="Câu lạc bộ Sổ Media" />
-    <meta property="og:description" content="Câu lạc bộ Sổ Media" />
+    <meta property="og:description" content="Website chính thức của Câu lạc bộ Sổ Media" />
     <meta property="og:image" content="/demo.png" />
     <meta property="og:url" content="https://so-media-ptit.vercel.app/" />
     <meta property="og:type" content="website" />
